implement local attack phase

--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,7 @@
         </button>
     </div>
 
-    <div id="notification">
-        
-    </div>
+    <div id="notification"></div>
 
     <div id="battle-screen">
         <div id="self-troops-wrapper">
@@ -213,6 +211,11 @@
                 </svg>
             </div>
         </div>
+        <div id="self-dice-wrapper">
+            <div id="self-dice-1" class="dice">1</div>
+            <div id="self-dice-2" class="dice">2</div>
+            <div id="self-dice-3" class="dice">3</div>
+        </div>
         <div id="enemy-troops-wrapper">
             <div id="enemy-troops-title-wrapper">
                 <svg viewBox="0 0 200 50">
@@ -228,6 +231,10 @@
                     </text>
                 </svg>
             </div>
+        </div>
+        <div id="enemy-dice-wrapper">
+            <div id="enemy-dice-1" class="dice">1</div>
+            <div id="enemy-dice-2" class="dice">2</div>
         </div>
         <div id="battle-buttons-wrapper">
             <button id="battle-button">
