implement basic dice animation

--- a/public/index.html
+++ b/public/index.html
@@ -211,10 +211,10 @@
                 </svg>
             </div>
         </div>
-        <div id="self-dice-wrapper">
-            <div id="self-dice-1" class="dice">1</div>
-            <div id="self-dice-2" class="dice">2</div>
-            <div id="self-dice-3" class="dice">3</div>
+        <div id="self-dice-wrapper" class="dice-wrapper">
+            <div id="self-dice-1" class="dice"></div>
+            <div id="self-dice-2" class="dice"></div>
+            <div id="self-dice-3" class="dice"></div>
         </div>
         <div id="enemy-troops-wrapper">
             <div id="enemy-troops-title-wrapper">
@@ -232,9 +232,9 @@
                 </svg>
             </div>
         </div>
-        <div id="enemy-dice-wrapper">
-            <div id="enemy-dice-1" class="dice">1</div>
-            <div id="enemy-dice-2" class="dice">2</div>
+        <div id="enemy-dice-wrapper" class="dice-wrapper">
+            <div id="enemy-dice-1" class="dice"></div>
+            <div id="enemy-dice-2" class="dice"></div>
         </div>
         <div id="battle-buttons-wrapper">
             <button id="battle-button">
