migrate from modules

--- a/public/index.html
+++ b/public/index.html
@@ -282,6 +282,19 @@
         </div>
     </div>
 
-    <script src="src/classes/game.js" type="module"></script>
+    <script src="/socket.io/socket.io.min.js"></script>
+    <script src="src/constants/colors.js"></script>
+    <script src="src/constants/dice.js"></script>
+    <script src="src/constants/phases.js"></script>
+    <script src="src/constants/zoneGraph.js"></script>
+    <script src="src/classes/authentication.js"></script>
+    <script src="src/classes/avatar.js"></script>
+    <script src="src/classes/board.js"></script>
+    <script src="src/classes/game.js"></script>
+    <script src="src/classes/registration.js"></script>
+    <script src="src/classes/socket.js"></script>
+    <script src="src/classes/ui.js"></script>
+    <script src="src/utils/svg.js"></script>
+    <script src="src/utils/stateMachine.js"></script>
 </body>
 </html>
