connect existing frontend to socket

--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
                     </text>
                 </svg>
             </div>
-            <div id="enemy-troops-text-wrapper" class="text-display enemy">
+            <div id="enemy-troops-text-wrapper" class="text-display">
                 <svg viewBox="0 0 50 50">
                     <text id="enemy-troops-text" x="25" y="32" class="svg-text">
                         2
