add waiting screen

--- a/public/index.html
+++ b/public/index.html
@@ -353,6 +353,12 @@
         </div>
     </div>
 
+    <div id="waiting-overlay" class="overlay row">
+        <div id="waiting-window" class="content row">
+            Waiting on an opponent...
+        </div>
+    </div>
+
     <div id="signin-overlay" class="overlay row">
         <div class="content shadow row">
             <form id="signin-form" class="col">
