--- a/public/index.html
+++ b/public/index.html
@@ -213,6 +213,92 @@
              <text id="cards-count-text" y="63.25" x="58">0</text>
            </svg>
     </button>
+    
+    <div id="notification-overlay" class="overlay row" style="display: none;">
+        <div id="introduction-notification" class="notification col" style="display: none;">
+            <div id="introduction-title" class="notification-title">
+                <svg viewBox="0 0 300 100" class="svg-text">
+                    <text id="introduction-title-text" x="150" y="64">
+                        Get Ready
+                    </text>
+                </svg>
+            </div>
+            <div id="introduction-icon" class="text-display player-0 big">
+                &#128057
+            </div>
+            <div id="introduction-player-name" class="notification-subtitle">
+                <svg viewBox="0 0 600 100" class="svg-text">
+                    <text id="introduction-player-name-text" x="300" y="60">
+                        General Rougarou 17147
+                    </text>
+                </svg>
+            </div>
+            <div id="introduction-description-container" class="col">
+                <div id="introduction-description-0">You are General of the <span id="introduction-color-icon" class="player-0"></span> <span id="introduction-color-text">Red</span> troops</div>
+                <div id="introduction-description-1">Each turn you will DRAFT > ATTACK > FORTIFY</div>
+            </div>
+        </div>
+        <div id="phase-notification" class="col" style="display: none;">
+            <div id="phase-notification-background" class="player-0"></div>
+            <svg id="phase-notification-wrapper" viewBox="0 0 600 100" class="svg-text notification-title">
+                <text id="phase-notification-text" x="300" y="68">
+                    ATTACK
+                </text>
+            </svg>
+        </div>
+        <div id="troops-notification" class="col" style="display: none;">
+            <div id="troops-notification-top-hint" class="col">
+                <svg viewBox="0 0 600 100" class="svg-text">
+                    <text id="troops-notification-top-text" x="300" y="60">
+                        Adele The Slick turn
+                    </text>
+                </svg>
+            </div>
+            <div id="troops-notification-window" class="col">
+                <div id="troops-notification-window-header" class="player-0">
+                    <svg viewBox="0 0 600 100" class="svg-text">
+                        <text id="troops-notification-window-header-text" x="300" y="64">
+                            Received Troops
+                        </text>
+                    </svg>
+                </div>
+                <div id="troops-notification-window-content" class="col">
+                    <svg id="troops-notification-troops-text-wrapper" viewBox="0 0 50 50" class="text-display medium player-0">
+                        <text id="troops-notification-troops-text" x="25" y="32">
+                            4
+                        </text>
+                    </svg>
+                    <div id="troops-notification-troops-description">
+                        Troops awarded for occupying 14 territories and 3 continents
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="card-notification" class="col" style="display: none;">
+            <div id="card-notification-title" class="notification-title">
+                <svg viewBox="0 0 600 100" class="svg-text">
+                    <text id="card-notification-title-text" x="300" y="64">
+                        Card Bonus!
+                    </text>
+                </svg>
+            </div>
+            <div id="card-notification-card-wrapper">
+                <div class="card">
+                    <svg viewBox="0 0 512 512">
+                        <path d="M323.8 149.6l10.4 13.8L491.8 43.8 481.4 30zm-95.1 72.2l25.3 33.3-68.7 64.7-21.5-10.1 9.3-45.7zM18.3 424.2l99.1-95.3
+                        s21.7 10.5 27.5 8.7c.5-.2 1-.4 1.4-.8 2.6-2 6-6.9 9.1-12l1.1.5 19 8.8L74.3 482c-6.8-40.3-51.6-57.5-56-57.8zm224.1-212.8l67.7-51.3 17.1 22.6
+                        c4.7 6.3 3.9 15.5-2.4 20.2l-56.4 42.8-.7-1zm-64.8 182.3c7.9 4.8 18.3 2.3 23.1-5.7l14-23.1
+                        c3.4-5.7 3.2-12.8-.6-18.3 1.3-.7 2.5-1.5 3.6-2.3 5.4-4 9-9.9 10.1-16.4 1.1-6.8-.5-13.8-4.4-20.3l-6.4 6.1
+                        c2.1 3.9 3 8.4 2.3 12.9-1 6.4-5.7 11.5-12.7 14.2-7.7-3.1-16.5-.2-20.7 6.9l-14 23.1c-4.8 7.8-2.3 18.1 5.7 22.9zm1.7-18.6l14.1-23.2
+                        c2.4-3.9 7.4-5.1 11.3-2.8l1.1.8c3.1 2.6 3.8 7.1 1.7 10.5l-14.1 23.2c-2.4 3.9-7.4 5.2-11.3 2.8-3.9-2.3-5.2-7.4-2.8-11.3zm167.6-189
+                        c-.5-3-1.5-5.9-2.8-8.7L488.5 67.9l5.2 6.9zm-192.7 84.5l-3.2 15.6c-7.7-3.3-10.2-12.1-18.1-9.2 2.4-8.6 16.4-5.3 21.3-6.4z"/>
+                    </svg>
+                    Artillery
+                </div>
+            </div>
+            <div></div>
+        </div>
+    </div>
 
     <div id="battle-screen">
         <div id="self-troops-wrapper">
@@ -365,7 +451,7 @@
             Waiting on an opponent...
         </div>
     </div>
-
+    
     <div id="signin-overlay" class="overlay backdrop row">
         <div class="content shadow row">
             <form id="signin-form" class="col">
@@ -398,89 +484,54 @@
         </div>
     </div>
 
-    <div id="notification-overlay" class="overlay row" style="display: none;">
-        <div id="introduction-notification" class="notification col" style="display: none;">
-            <div id="introduction-title" class="notification-title">
-                <svg viewBox="0 0 300 100" class="svg-text">
-                    <text id="introduction-title-text" x="150" y="64">
-                        Get Ready
-                    </text>
-                </svg>
+    <div id="instructions-overlay" class="overlay backdrop row" style="display: none;">
+        <div id="instructions-content" class="content shadow col">
+            <div id="instructions-text">
+                - Each player takes turn in DRAFT, ATTACK, and FORTIFY phases in that order. 
+                <br>
+                - In DRAFT phase, you are rewarded a number of troops based on the number of territories and continents you control. 
+                You then choose territory(s) to deploy them in to strengthen your forces. 
+                The troops can be spread as concentrated or as thinly as you plan to. 
+                <br>
+                - In ATTACK phase, you can initiate attacks from any of your controlled territories to a neighbouring enemy territory. 
+                Each territory must have 1 troop remaining to stand the ground, so you always attack with 1 less troop than you control. 
+                In each attack, an attacker can attack with 3 troops at most, whereas the defender can defend with 2 only. 
+                Each troop translates to a roll of dice. 
+                The highest-valued roll of the attacker battles with the highest-valued roll of the defender, and so on. 
+                The lower-valued of the two loses the battle, and the corresponding troop is eliminated.
+                In the case of a draw, the attacker troop is eliminated. 
+                If all defender troops are eliminated, you can select how many of your troops to move to the newly controlled territory. 
+                Attacks can happen as many times as possible per phase, as long as you have the troops to back it. 
+                <br>
+                - In FORTIFY phase, you can choose to move troops from a controlled territory to a connected controlled territory. 
+                Unlike in DRAFT phase, this can only be done once per phase, so plan wisely. 
+                <br>
+                - If you have newly taken control of an enemy territory in ATTACK phase, you will be rewarded a card, 1 of 3 types, at the end of your turn. 
+                You can redeem these cards in sets of 3's during your DRAFT phase, in exchange for additional draft troops. 
+                You can only redeem 3-of-a-kinds, or 3-of-all-different-kinds. 
+                <br>
+                - When the entire map is controlled by 1 player only, the game ends in that player's victory. 
             </div>
-            <div id="introduction-icon" class="text-display player-0 big">
-                &#128057
-            </div>
-            <div id="introduction-player-name" class="notification-subtitle">
-                <svg viewBox="0 0 600 100" class="svg-text">
-                    <text id="introduction-player-name-text" x="300" y="60">
-                        General Rougarou 17147
-                    </text>
-                </svg>
-            </div>
-            <div id="introduction-description-container" class="col">
-                <div id="introduction-description-0">You are General of the <span id="introduction-color-icon" class="player-0"></span> <span id="introduction-color-text">Red</span> troops</div>
-                <div id="introduction-description-1">Each turn you will DRAFT > ATTACK > FORTIFY</div>
-            </div>
+            <button id="instructions-back-button">
+                Back
+            </button>
         </div>
-        <div id="phase-notification" class="col" style="display: none;">
-            <div id="phase-notification-background" class="player-0"></div>
-            <svg id="phase-notification-wrapper" viewBox="0 0 600 100" class="svg-text notification-title">
-                <text id="phase-notification-text" x="300" y="68">
-                    ATTACK
-                </text>
-            </svg>
-        </div>
-        <div id="troops-notification" class="col" style="display: none;">
-            <div id="troops-notification-top-hint" class="col">
-                <svg viewBox="0 0 600 100" class="svg-text">
-                    <text id="troops-notification-top-text" x="300" y="60">
-                        Adele The Slick turn
-                    </text>
-                </svg>
-            </div>
-            <div id="troops-notification-window" class="col">
-                <div id="troops-notification-window-header" class="player-0">
-                    <svg viewBox="0 0 600 100" class="svg-text">
-                        <text id="troops-notification-window-header-text" x="300" y="64">
-                            Received Troops
-                        </text>
-                    </svg>
-                </div>
-                <div id="troops-notification-window-content" class="col">
-                    <svg id="troops-notification-troops-text-wrapper" viewBox="0 0 50 50" class="text-display medium player-0">
-                        <text id="troops-notification-troops-text" x="25" y="32">
-                            4
-                        </text>
-                    </svg>
-                    <div id="troops-notification-troops-description">
-                        Troops awarded for occupying 14 territories and 3 continents
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="card-notification" class="col" style="display: none;">
-            <div id="card-notification-title" class="notification-title">
-                <svg viewBox="0 0 600 100" class="svg-text">
-                    <text id="card-notification-title-text" x="300" y="64">
-                        Card Bonus!
-                    </text>
-                </svg>
-            </div>
-            <div id="card-notification-card-wrapper">
-                <div class="card">
-                    <svg viewBox="0 0 512 512">
-                        <path d="M323.8 149.6l10.4 13.8L491.8 43.8 481.4 30zm-95.1 72.2l25.3 33.3-68.7 64.7-21.5-10.1 9.3-45.7zM18.3 424.2l99.1-95.3
-                        s21.7 10.5 27.5 8.7c.5-.2 1-.4 1.4-.8 2.6-2 6-6.9 9.1-12l1.1.5 19 8.8L74.3 482c-6.8-40.3-51.6-57.5-56-57.8zm224.1-212.8l67.7-51.3 17.1 22.6
-                        c4.7 6.3 3.9 15.5-2.4 20.2l-56.4 42.8-.7-1zm-64.8 182.3c7.9 4.8 18.3 2.3 23.1-5.7l14-23.1
-                        c3.4-5.7 3.2-12.8-.6-18.3 1.3-.7 2.5-1.5 3.6-2.3 5.4-4 9-9.9 10.1-16.4 1.1-6.8-.5-13.8-4.4-20.3l-6.4 6.1
-                        c2.1 3.9 3 8.4 2.3 12.9-1 6.4-5.7 11.5-12.7 14.2-7.7-3.1-16.5-.2-20.7 6.9l-14 23.1c-4.8 7.8-2.3 18.1 5.7 22.9zm1.7-18.6l14.1-23.2
-                        c2.4-3.9 7.4-5.1 11.3-2.8l1.1.8c3.1 2.6 3.8 7.1 1.7 10.5l-14.1 23.2c-2.4 3.9-7.4 5.2-11.3 2.8-3.9-2.3-5.2-7.4-2.8-11.3zm167.6-189
-                        c-.5-3-1.5-5.9-2.8-8.7L488.5 67.9l5.2 6.9zm-192.7 84.5l-3.2 15.6c-7.7-3.3-10.2-12.1-18.1-9.2 2.4-8.6 16.4-5.3 21.3-6.4z"/>
-                    </svg>
-                    Artillery
-                </div>
-            </div>
-            <div></div>
+    </div>
+
+    <div id="title-overlay" class="overlay backdrop row">
+        <svg id="game-title" viewBox="0 0 300 100" class="svg-text">
+            <text id="introduction-title-text" x="150" y="64">
+                WRISK
+            </text>
+        </svg>
+
+        <div id="title-overlay-content" class="content shadow col">
+            <button id="title-play-button" class="confirm">
+                Play
+            </button>
+            <button id="title-instructions-button">
+                How to Play?
+            </button>
         </div>
     </div>
 
