--- a/public/index.html
+++ b/public/index.html
@@ -203,6 +203,7 @@
     <div id="hint"></div>
     
     <!-- <button id="quit-button" class="cancel">Quit</button> -->
+    <button id="cheat-button">Cheat</button>
     <button id="open-cards-button">
         <svg viewBox="0 0 128 128"">
              <g>
