--- a/public/index.html
+++ b/public/index.html
@@ -541,6 +541,7 @@
     <script src="src/classes/notification.js"></script>
     <script src="src/classes/registration.js"></script>
     <script src="src/classes/socket.js"></script>
+    <script src="src/classes/sound.js"></script>
     <script src="src/classes/ui.js"></script>
     <script src="src/utils/svg.js"></script>
     <script src="src/utils/stateMachine.js"></script>
