--- a/public/index.html
+++ b/public/index.html
@@ -347,10 +347,10 @@
             <button id="battle-button">
                 Battle
             </button>
-            <!-- <div id="battle-input-wrapper">
-                <input id="skip-checkbox" type="checkbox" name="skip" name="skip-checkbox" value=1>
+            <div id="battle-input-wrapper">
+                <input id="skip-checkbox" type="checkbox" name="skip" name="skip-checkbox">
                 <label for="skip-checkbox">Commit all troops and skip?</label>
-            </div> -->
+            </div>
         </div>
         <button id="close-battle-button">Close</button>
     </div>
