--- a/public/index.html
+++ b/public/index.html
@@ -205,14 +205,15 @@
     <!-- <button id="quit-button" class="cancel">Quit</button> -->
     <button id="cheat-button">Cheat</button>
     <button id="open-cards-button">
-        <svg viewBox="0 0 128 128"">
-             <g>
+        <svg viewBox="0 0 128 128">
+            <g>
                 <rect transform="rotate(30 66 70)" stroke="#000000" fill="#ffffff" x="34" y="22" width="64" height="96" rx="8" stroke-width="3"/>
                 <rect transform="rotate(30 64 64)" stroke="#000000" fill="#ffffff" x="32" y="16" width="64" height="96" rx="8" stroke-width="3"/>
                 <rect transform="rotate(30 62 58)" stroke="#000000" fill="#ffffff" x="30" y="10" width="64" height="96" rx="8" stroke-width="3"/>
-             </g>
-             <text id="cards-count-text" y="63.25" x="58">0</text>
-           </svg>
+            </g>
+            <text id="cards-count-text" y="63.25" x="58">0</text>
+        </svg>
+        <div id="open-cards-button-alert" class="text-display" style="display: none;"></div>
     </button>
     
     <div id="notification-overlay" class="overlay row" style="display: none;">
