--- a/public/index.html
+++ b/public/index.html
@@ -285,7 +285,7 @@
                 </svg>
             </div>
             <div id="card-notification-card-wrapper">
-                <div class="card">
+                <div class="card no-pointer-event">
                     <svg viewBox="0 0 512 512">
                         <path d="M323.8 149.6l10.4 13.8L491.8 43.8 481.4 30zm-95.1 72.2l25.3 33.3-68.7 64.7-21.5-10.1 9.3-45.7zM18.3 424.2l99.1-95.3
                         s21.7 10.5 27.5 8.7c.5-.2 1-.4 1.4-.8 2.6-2 6-6.9 9.1-12l1.1.5 19 8.8L74.3 482c-6.8-40.3-51.6-57.5-56-57.8zm224.1-212.8l67.7-51.3 17.1 22.6
